--- a/src/assets/i18n/ar.json
+++ b/src/assets/i18n/ar.json
@@ -60,16 +60,16 @@
 	"*Please select subject": "*يرجى إختيار المادة",
 	"": {
 		" All Rights Reserved": {
-			"": ". All Rights Reserved."
+			"": "جميع الحقوق محفوظة"
 		}
 	},
 	"1st": "الصف الأول الثانوي",
 	"2nd": "الصف الثاني الثانوي",
 	"3rd": "الصف الثالث الثانوي",
-	"About": "حول",
+	"About": "عن",
 	"Accept": "الموافقة",
 	"Account created": "تم انشاء الحساب",
-	"Action": "Action",
+	"Action": "الإجراء",
 	"Activated Successfully": "تم التفعيل بنجاح",
 	"Active": "مفعل",
 	"Active Course": "كورس مفعل",
@@ -79,9 +79,9 @@
 	"Add Lecture": "أضف محاضرة",
 	"Add New Chapter": "أضف فصل جديد",
 	"Add New Course": "اضف كورس جديد",
-	"Add New Lecture": "Add New Lecture",
-	"Add to Cart": "إضافة للكارت",
-	"Added to cart": "إضافة للكارت",
+	"Add New Lecture": "إضافة محاضره جديده",
+	"Add to Cart": "إضافة للسلة",
+	"Added to cart": "إضافة للسلة",
 	"All Courses": "كل الكورسات",
 	"All Rights Reserved": "كل الحقوق محفوظة",
 	"Already have an account?": "لديك حساب مسجل بالفعل?",
@@ -102,8 +102,8 @@
 	"Back to Home": "العودة للرئيسية",
 	"Back to home": "العودة للرئيسية",
 	"By": "بواسطة",
-	"By signing up, you agree to our": "عن طريق الأشتراك, انت توافق علينا",
-	"Cancel": "إالغاء",
+	"By signing up, you agree to our": "عن طريق الإشتراك أنت توافق على ",
+	"Cancel": "إلغاء",
 	"Chapter": "الفصل",
 	"Chapter Description*": "الوصف التوضيحى للفصل*",
 	"Chapter Name": "اسم الفصل",
@@ -143,7 +143,7 @@
 	"Email": "الأيميل",
 	"Email Address": "البريد الإلكترونى",
 	"Email Address :": "البريد الإلكترونى :",
-	"Email or phone": "Email or phone",
+	"Email or phone": "البريد الإلكتروني او الموبايل",
 	"English": "English",
 	"English Language": "لغة انجليزية",
 	"Error while creating chapter, please try again": "حدث خطأ خلال الأنشاء , يرجى المحاولة مرة أخرى",
@@ -154,14 +154,14 @@
 	"Error while update course, please try again": "حدث خطأ خلال تعديل الكورس ,يرجى المحاولة مرة اخرى",
 	"Error while update lecture, please try again": "حدث خطأ خلال تعديل المحاضرة, يرجى المحاولة مرة اخرى",
 	"Explore our schools to find your perfect course": "اكتشف سمارت اكاديمى ",
-	"File not supported": "الملف غير مدعوم",
-	"Forgot Password": "نسييت كلمة المرو",
+	"File not supported": "الملف غير مدّعم",
+	"Forgot Password": "نسييت كلمة المرور",
 	"French": "فرنساوي",
 	"General Information": "معلومات عامة",
 	"Geography": "جغرافيا",
 	"Geology": "جيولوجيا",
 	"German": "ألماني",
-	"Get Started": "أبدا الأن",
+	"Get Started": "إبدا الان",
 	"Go to home": "العودة للصفحة الرئيسية",
 	"Grade 1": "الصف 1",
 	"Grade 2": "الصف 2",
@@ -169,29 +169,29 @@
 	"Grades*": "الصفوف*",
 	"History": "تاريخ",
 	"Home": " الرئيسية ",
-	"Insert description": "Insert description",
+	"Insert description": "اضف التفاصيل",
 	"Insert your Chapter title": {
-		"": "Insert your Chapter title."
+		"": "ادخل عنوان الفصل ."
 	},
 	"Insert your course Subtitle": {
-		"": "Insert your course Subtitle."
+		"": "ادخل العنوان الفرعي للكورس."
 	},
-	"Insert your course description": "Insert your course description",
-	"Insert your course part description": "Insert your course part description",
+	"Insert your course description": "اضف تفاصيل الكورس",
+	"Insert your course part description": "اضف تفاصيل الكورس",
 	"Insert your course title": {
-		"": "Insert your course title."
+		"": "ادخل عنوان الكورس."
 	},
 	"Insert your lecture title": {
-		"": "Insert your lecture title."
+		"": "أدخل عنوان المحاضره."
 	},
 	"Instractor Name": "اسم المحاضر",
 	"Instractors Request List": "قائمة طلبات المحاضرين",
 	"Instructor Dashboard": "واجهة عرض المحاضر",
-	"Instructors Request List": "Instructors Request List",
+	"Instructors Request List": "طلبات المدرسين",
 	"Invalid reset password link": "رابط استعادة كلمة المرور غير صحيح",
 	"Italian": "إيطالي",
 	"Item No": {
-		"": "عنصر رقم."
+		"": "رقم"
 	},
 	"LE": "ج م",
 	"Language*": "اللغة*",
@@ -212,20 +212,20 @@
 	"Login": "تسجيل الدخول",
 	"Main Address :": "العنوان الرئيسى :",
 	"Match your goals to our classes, explore your options, and map out your path to success": {
-		"": "طابق اهدافك مع صفوفنا, اكتشف كل خياراتك, وقم باستخراج طريقك  للنجاح."
+		"": "اكشتف اهدافك وابدا طريق النجاح"
 	},
 	"Math": "الرياضيات",
 	"Menu": "القائمة",
 	"Minutes": "الدقائق",
 	"My Courses": "الكورسات الخاصة بك",
-	"My Dashboard": "واجهة العرض",
+	"My Dashboard": "الرئيسية",
 	"Newest Courses": "الكورسات الجديد",
 	"Next": "التالى",
 	"No": "رفض",
 	"No result found": "لا توجد نتائج",
 	"Order Details": "بيانات الطلبات",
 	"Order Summary": "ملخص الطلب",
-	"Password": "Password",
+	"Password": "كلمة المرور",
 	"Password changed successfully": "تم تغيير كلمة المرور بنجاح",
 	"Pending": "قيد الموافقة",
 	"Pending Course": "كورس قيد الموافقة ",
@@ -254,7 +254,7 @@
 	"Reset Password": "تغيير كلمة المرور",
 	"Reset Your Password": "تغيير كلمة المرور",
 	"Reset link Sent, Please Check Your mail": "تم إرسال ايميل  تغيير كلمة المرور, يرجى تفقد البريد الألكترونى",
-	"Save Lecture": "Save Lecture",
+	"Save Lecture": "حفظ المحاضره",
 	"Science": "العلوم",
 	"Search": "البحث",
 	"Secure checkout": "الدفع المؤمن",
@@ -267,8 +267,8 @@
 	"Shopping cart": "كارت التسوق",
 	"Sign In": "تسجيل الدخول",
 	"Sign Out": "تسجيل الخروج",
-	"Sign Up": "الأشتراك",
-	"Sign Up and Start Learning!": "قم بالأشتراك وابدأ بالتعلم!",
+	"Sign Up": "الإشتراك",
+	"Sign Up and Start Learning!": "قم بالإشتراك وابدأ التعلم",
 	"Smart Academy": "سمارت أكاديمى",
 	"Sorry your link is expired, please contact the administrator": {
 		"": "نأسف ل انتهاء مدة   العرض لهذا الرابط, يرجى التواصل مع  المسؤل."
@@ -288,7 +288,7 @@
 	"Table of content": "جدول المحتوى",
 	"Terms": "القواعد",
 	"Terms of Use": "قواعد الأستحدام",
-	"Thank You": "شكرا جزيلاَ",
+	"Thank You": " شكرا لك",
 	"Title": "العنوان",
 	"Total Chapters": "اجمالى الفصول",
 	"Total Cost": "اجمالى التكلفة",
@@ -339,17 +339,17 @@
 	"count": "العدد",
 	"course Title": "عنوان الكورس",
 	"course name:": "اسم الكورس:",
-	"create Date": "تاريخ الأنشاء",
-	"email": "الأيميل",
-	"example: Elkashef": "example: Elkashef",
-	"example: Hossam": "example: Hossam",
+	"create Date": "تاريخ الإنشاء",
+	"email": "الإيميل",
+	"example: Elkashef": "مثال : محمود",
+	"example: Hossam": " مثال : محمد",
 	"fee": "الرسوم",
 	"first Name": "الأسم الأول",
 	"instructor": "المحاضر",
 	"instructor mobile number:": "رقم محمول المحاضر:",
 	"instructor name:": "اسم المحاضر:",
 	"language": "اللغة",
-	"last Name": "الأسم الأخير",
+	"last Name": "الإسم ",
 	"lecture": "المحاضرة",
 	"lectures": "المحاضرات",
 	"level": "الصف",
@@ -359,9 +359,9 @@
 	"phone number": "رقم الهاتف",
 	"please enter a valid mail": "من فضلك ادخل الأيميل صحيح",
 	"please enter a valid password, min 8 characters": "   من فضلك ادخل كلمة مرور صحيحة ,اقل عدد  8حروف ",
-	"sign Up": "الأشتراك",
-	"sign Up as": " الأشتراك ك",
-	"sort": "ترتيب",
+	"sign Up": "الإشتراك",
+	"sign Up as": "الإشتراك كـ",
+	"sort": "الترتيب",
 	"sort ": "الترتيب ",
 	"student": "الطالب",
 	"student mobile number:": "رقم محمول الطالب:",
