--- a/src/assets/i18n/ar.json
+++ b/src/assets/i18n/ar.json
@@ -58,11 +58,6 @@
 	"*Please select lecture File": "*يرجى إختيار ملف المحاضرة",
 	"*Please select promo video": "*يرجى إختيار الفيديو التوضيحى",
 	"*Please select subject": "*يرجى إختيار المادة",
-	"": {
-		" All Rights Reserved": {
-			"": "جميع الحقوق محفوظة"
-		}
-	},
 	"1st": "الصف الأول الثانوي",
 	"2nd": "الصف الثاني الثانوي",
 	"3rd": "الصف الثالث الثانوي",
@@ -130,7 +125,8 @@
 	"Courses": "الكورسات",
 	"Courses Content": "محتوى الكورسات",
 	"Cover Image": "الصورة الرئيسية",
-	"Create Lecture": "Create Lecture",
+	"Create Chapter": "إنشاء فصل",
+	"Create Lecture": "إنشاء محاضرة",
 	"Create New Course": "أنشئ كورس جديد",
 	"Dashboard": "واجهة العرض",
 	"Deactivated Successfully": "تم الإلغاء بنجاح",
@@ -159,7 +155,7 @@
 	"French": "فرنساوي",
 	"General Information": "معلومات عامة",
 	"Geography": "جغرافيا",
-	"Geology": "جيولوجيا",
+	"Geology": "أحياء",
 	"German": "ألماني",
 	"Get Started": "إبدا الان",
 	"Go to home": "العودة للصفحة الرئيسية",
@@ -223,6 +219,7 @@
 	"Next": "التالى",
 	"No": "رفض",
 	"No result found": "لا توجد نتائج",
+	"Or": "أو",
 	"Order Details": "بيانات الطلبات",
 	"Order Summary": "ملخص الطلب",
 	"Password": "كلمة المرور",
@@ -242,7 +239,7 @@
 	"Please try again": "يرجى إعادة المحاولة",
 	"Preview this course": "عرض هذا الكورس",
 	"Price": "السعر",
-	"Privacy Policy": "ساسية الخصوصية",
+	"Privacy Policy": "سياسة الخصوصية",
 	"Promotional Video": "الفيديو الدعائى",
 	"Psychology": "علم نفس",
 	"Refresh table": "تجديد الجدول",
@@ -254,6 +251,7 @@
 	"Reset Password": "تغيير كلمة المرور",
 	"Reset Your Password": "تغيير كلمة المرور",
 	"Reset link Sent, Please Check Your mail": "تم إرسال ايميل  تغيير كلمة المرور, يرجى تفقد البريد الألكترونى",
+	"Save Chapter": "حفظ الفصل ",
 	"Save Lecture": "حفظ المحاضره",
 	"Science": "العلوم",
 	"Search": "البحث",
@@ -344,12 +342,12 @@
 	"example: Elkashef": "مثال : محمود",
 	"example: Hossam": " مثال : محمد",
 	"fee": "الرسوم",
-	"first Name": "الأسم الأول",
+	"first Name": "الإسم الأول",
 	"instructor": "المحاضر",
 	"instructor mobile number:": "رقم محمول المحاضر:",
 	"instructor name:": "اسم المحاضر:",
 	"language": "اللغة",
-	"last Name": "الإسم ",
+	"last Name": "الإسم الأخير ",
 	"lecture": "المحاضرة",
 	"lectures": "المحاضرات",
 	"level": "الصف",
