grade and chapter status

--- a/src/assets/i18n/ar.json
+++ b/src/assets/i18n/ar.json
@@ -143,6 +143,7 @@
 	"Email or phone": "البريد الإلكتروني او الموبايل",
 	"English": "English",
 	"English Language": "لغة انجليزية",
+	"Enrolled": "Enrolled",
 	"Error while creating chapter, please try again": "حدث خطأ خلال الأنشاء , يرجى المحاولة مرة أخرى",
 	"Error while creating course, please try again": "حدث خطأ خلال إنشاء الكورس, يرجى المحاولة مرة اخرى",
 	"Error while creating lecture, please try again": "خدث خطأ خلال إنشاء المحاضرة , يرجى المحاولة مرة اخرى",
