--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -143,6 +143,7 @@
 	"Email or phone": "Email or phone",
 	"English": "English",
 	"English Language": "English Language",
+	"Enrolled": "Enrolled",
 	"Error while creating chapter, please try again": "Error while creating chapter, please try again",
 	"Error while creating course, please try again": "Error while creating course, please try again",
 	"Error while creating lecture, please try again": "Error while creating lecture, please try again",
