--- a/src/assets/i18n/ar.json
+++ b/src/assets/i18n/ar.json
@@ -336,6 +336,7 @@
 	"chapter name:": "اسم الفصل:",
 	"chapters": "الفصول",
 	"confirm": "التاكيد",
+	"confirm password": "confirm password",
 	"count": "العدد",
 	"course Title": "عنوان الكورس",
 	"course name:": "اسم الكورس:",
