--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -336,6 +336,7 @@
 	"chapter name:": "Chapter Name:",
 	"chapters": "Chapters",
 	"confirm": "Confirm",
+	"confirm password": "confirm password",
 	"count": "Count",
 	"course Title": "Course Title",
 	"course name:": "Course Name:",
