--- a/src/assets/i18n/ar.json
+++ b/src/assets/i18n/ar.json
@@ -192,6 +192,7 @@
 		"": "رقم"
 	},
 	"LE": "ج م",
+	"Language": "Language",
 	"Language*": "اللغة*",
 	"Last updated ": "التعديل الأخير ",
 	"Lecture Description*": "وصف المحاضرة*",
