--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -192,6 +192,7 @@
 		"": "Item No."
 	},
 	"LE": "LE",
+	"Language": "Language",
 	"Language*": "Language*",
 	"Last updated ": "Last updated ",
 	"Lecture Description*": "Lecture Description*",
