--- a/src/assets/i18n/ar.json
+++ b/src/assets/i18n/ar.json
@@ -327,6 +327,7 @@
 	},
 	"You are not allowed to view this video or an error occurred, please try again": "غير مسموح لك بمشاهدة الفيديو حدث خطأ ما, من فضلك حاول مجددا",
 	"You are not authorized to view this Url": "ليس لديك الصلاجية لمشاهدة هذا الرابط",
+	"You are not authorized, you have been logged out": "You are not authorized, you have been logged out",
 	"Your browser does not support the video tag": {
 		"": "لا يدعم المتصفح الخاص بك هذا الامتداد."
 	},
