--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -327,6 +327,7 @@
 	},
 	"You are not allowed to view this video or an error occurred, please try again": "You are not allowed to view this video or an error occurred, please try again",
 	"You are not authorized to view this Url": "You are not authorized to view this Url",
+	"You are not authorized, you have been logged out": "You are not authorized, you have been logged out",
 	"Your browser does not support the video tag": {
 		"": "Your browser does not support the video tag."
 	},
