--- a/src/assets/i18n/ar.json
+++ b/src/assets/i18n/ar.json
@@ -186,6 +186,7 @@
 	"Instractor Name": "اسم المحاضر",
 	"Instractors Request List": "قائمة طلبات المحاضرين",
 	"Instructor Dashboard": "واجهة عرض المحاضر",
+	"Instructor Name": "Instructor Name",
 	"Instructors Request List": "طلبات المدرسين",
 	"Invalid reset password link": "رابط استعادة كلمة المرور غير صحيح",
 	"Italian": "إيطالي",
