--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -186,6 +186,7 @@
 	"Instractor Name": "Instractor Name",
 	"Instractors Request List": "Instractors Request List",
 	"Instructor Dashboard": "Instructor Dashboard",
+	"Instructor Name": "Instructor Name",
 	"Instructors Request List": "Instructors Request List",
 	"Invalid reset password link": "Invalid reset password link",
 	"Italian": "Italian",
