--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -260,6 +260,7 @@
 	"Save Lecture": "Save Lecture",
 	"Science": "Science",
 	"Search": "Search",
+	"Search by Email or Phone Number": "Search by Email or Phone Number",
 	"Secure checkout": "Secure checkout",
 	"See all": "See all",
 	"Select Chapter": "Select Chapter",
