des links, select first video

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -223,6 +223,7 @@
 	"Newest Courses": "Newest Courses",
 	"Next": "Next",
 	"No": "No",
+	"No Description": "No Description",
 	"No result found": "No result found",
 	"Or": "Or",
 	"Order Details": "Order Details",
