--- a/src/assets/i18n/ar.json
+++ b/src/assets/i18n/ar.json
@@ -10,13 +10,13 @@
 	},
 	"'Upload your course image here": {
 		" It must meet our course image quality standards to be accepted": {
-			" Important guidelines: 493*352 pixels; ": {
+			" Important guidelines: 750x422 pixels; ": {
 				"jpg, ": {
 					"jpeg,": {
 						" gif, or ": {
 							"png": {
 								" no text on the image": {
-									"'": "'Upload your course image here. It must meet our course image quality standards to be accepted. Important guidelines: 493*352 pixels; .jpg, .jpeg,. gif, or .png. no text on the image.'"
+									"'": "'640x360 صورة الكورس هنا.يجب ان توافق الصورة المعيير القياسية لقبولها. إرشادات هامة:  pixels; .jpg, .jpeg,. gif, or .png.لا يسمح بنص على الصورة'"
 								}
 							}
 						}
@@ -260,7 +260,7 @@
 	"Save Lecture": "حفظ المحاضره",
 	"Science": "جولوجيا",
 	"Search": "البحث",
-	"Search by Email or Phone Number": "Search by Email or Phone Number",
+	"Search by Email or Phone Number": "البحث بواسطه رقم الموبايل او الإيميل",
 	"Secure checkout": "الدفع المؤمن",
 	"See all": "عرض الكل",
 	"Select Chapter": "إختر الفصل",
