--- a/src/assets/i18n/ar.json
+++ b/src/assets/i18n/ar.json
@@ -10,13 +10,13 @@
 	},
 	"'Upload your course image here": {
 		" It must meet our course image quality standards to be accepted": {
-			" Important guidelines: 750x422 pixels; ": {
+			" Important guidelines: 493*352 pixels; ": {
 				"jpg, ": {
 					"jpeg,": {
 						" gif, or ": {
 							"png": {
 								" no text on the image": {
-									"'": "'640x360 صورة الكورس هنا.يجب ان توافق الصورة المعيير القياسية لقبولها. إرشادات هامة:  pixels; .jpg, .jpeg,. gif, or .png.لا يسمح بنص على الصورة'"
+									"'": "'Upload your course image here. It must meet our course image quality standards to be accepted. Important guidelines: 493*352 pixels; .jpg, .jpeg,. gif, or .png. no text on the image.'"
 								}
 							}
 						}
@@ -223,6 +223,7 @@
 	"Newest Courses": "الكورسات الجديد",
 	"Next": "التالى",
 	"No": "رفض",
+	"No Description": "No Description",
 	"No result found": "لا توجد نتائج",
 	"Or": "أو",
 	"Order Details": "بيانات الطلبات",
