--- a/src/assets/i18n/ar.json
+++ b/src/assets/i18n/ar.json
@@ -238,6 +238,7 @@
 	"Phone Number :": "رقم الموبايل",
 	"Physics": "الفيزياء",
 	"Please Confirm?": "يرجى التاكيد ؟",
+	"Please Don't use IDM Extension to be able to use this website": "Please Don't use IDM Extension to be able to use this website",
 	"Please enter a valid mobile number or email": "يرجى إدخال رقم موبايل صحيح او ايميل صحيح",
 	"Please make sure your are entered a valid Email or Mobile, password, and Checked the reCaptcha box": "يرجى التاكد من البريد الإلكتروني أورقم الموبايل والصور المطلوبه  للتحقق",
 	"Please select a lecture": "يرجى اختيار محاضرة",
@@ -361,6 +362,7 @@
 	"time m": "الوقت د ",
 	"you Don't have any chapters in this course to view": "لا يوجد أي فصول لهذا الكورس لعرضها!",
 	"you are logged in successfully": "تم تسجيل الدخول بنجاح",
+	"you have been reported, and your account has been disabled for violating our terms": "you have been reported, and your account has been disabled for violating our terms",
 	"your chapter successfully created, congratulations!": "تم انشاء الفصل بنجاح, تهانينا!",
 	"your chapter successfully updated, congratulations!": "تم تعديل الفصل بنجاح, تهانينا!",
 	"your course successfully created, congratulations!": "تم انشاء الكورس بنجاح, تهانينا!",
