--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -238,6 +238,7 @@
 	"Phone Number :": "Phone Number :",
 	"Physics": "Physics",
 	"Please Confirm?": "Please Confirm?",
+	"Please Don't use IDM Extension to be able to use this website": "Please Don't use IDM Extension to be able to use this website",
 	"Please enter a valid mobile number or email": "Please enter a valid mobile number or email",
 	"Please make sure your are entered a valid Email or Mobile, password, and Checked the reCaptcha box": "Please make sure your are entered a valid Email or Mobile, password, and Checked the reCaptcha box",
 	"Please select a lecture": "Please select a lecture",
@@ -361,6 +362,7 @@
 	"time m": "Time m",
 	"you Don't have any chapters in this course to view": "you Don't have any chapters in this course to view",
 	"you are logged in successfully": "You are logged in successfully",
+	"you have been reported, and your account has been disabled for violating our terms": "you have been reported, and your account has been disabled for violating our terms",
 	"your chapter successfully created, congratulations!": "Your chapter successfully created, congratulations!",
 	"your chapter successfully updated, congratulations!": "Your chapter successfully updated, congratulations!",
 	"your course successfully created, congratulations!": "Your course successfully created, congratulations!",
