export float btn

--- a/src/assets/i18n/ar.json
+++ b/src/assets/i18n/ar.json
@@ -153,6 +153,7 @@
 	"Error while update course, please try again": "حدث خطأ خلال تعديل الكورس ,يرجى المحاولة مرة اخرى",
 	"Error while update lecture, please try again": "حدث خطأ خلال تعديل المحاضرة, يرجى المحاولة مرة اخرى",
 	"Explore our schools to find your perfect course": "اكتشف سمارت اكاديمى ",
+	"Export": "Export",
 	"File not supported": "الملف غير مدّعم",
 	"Forgot Password": "نسييت كلمة المرور",
 	"French": "فرنساوي",
