--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -153,6 +153,7 @@
 	"Error while update course, please try again": "Error while update course, please try again",
 	"Error while update lecture, please try again": "Error while update lecture, please try again",
 	"Explore our schools to find your perfect course": "Explore our schools to find your perfect course",
+	"Export": "Export",
 	"File not supported": "File not supported",
 	"Forgot Password": "Forgot Password",
 	"French": "French",
