--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -369,5 +369,7 @@
 	"your course successfully updated, congratulations!": "Your course successfully updated, congratulations!",
 	"your lecture successfully created, congratulations!": "Your lecture successfully created, congratulations!",
 	"your lecture successfully deleted!": "Your lecture successfully deleted!",
-	"your lecture successfully updated!": "Your lecture successfully updated!"
+  "your lecture successfully updated!": "Your lecture successfully updated!",
+  "Teachers": "Teachers",
+  "Why us": "Why us"
 }
