--- a/src/assets/i18n/ar.json
+++ b/src/assets/i18n/ar.json
@@ -230,7 +230,9 @@
 	"My Dashboard": "الرئيسية",
 	"Newest Courses": "الكورسات الجديد",
 	"Next": "التالى",
-	"No": "رفض",
+  "No": "رفض",
+  "block":"حظر",
+  "Unblock":"حذف الحظر",
 	"No Description": "No Description",
 	"No result found": "لا توجد نتائج",
 	"Or": "أو",
