--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -348,7 +348,9 @@
 	"create Date": "Create Date",
 	"email": "Email",
 	"example: Elkashef": "example: Elkashef",
-	"example: Hossam": "example: Hossam",
+  "example: Hossam": "example: Hossam",
+  "block":"block",
+  "Unblock":"Unblock",
 	"fee": "Fee",
 	"first Name": "First Name",
 	"instructor": "Instructor",
